# EMI-Node-Editor

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  PROJECT.md  README.md  demo.txt  doxygenTemplate.txt  file_guide.md  file_guide.txt  final_demo.txt  graph.json  graph.txt  node_editor.json  old_graph.txt  plan.md  tmp_dropbar_include.txt
.github/workflows/: build.yml  ci.yml  static-analysis.yml  tests.yml
Demo/: NodeGameFunctions.cpp  NodeGameFunctions.h  plan.md  previewNatives.cpp  previewNatives.h
EMI-Script/EMI-Script-master/src/: Defines.h  Intrinsic.cpp  VM.cpp  VM.h
EMI-Script/src/Parser/: AST.cpp
Scripts/: game.ril
dependencies/: CMakeLists.txt
dependencies/emi/: CMakeLists.txt
dependencies/imgui-filebrowser/: imfilebrowser.h
dependencies/imgui-node-editor/: imgui_node_editor.cpp
dependencies/imgui-node-editor-wrapper/: CMakeLists.txt
docs/: ARCHITECTURE_OVERVIEW.md  NEW_NODE_CHECKLIST.md  NODE_CREATION.md  index.html  plan.md
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  app_8cpp.html  app_8h.html  app_8h_source.html  class_app-members.html  class_app.html  class_console_emi_logger-members.html  class_console_emi_logger.html  class_console_emi_logger.js  class_console_panel-members.html  class_console_panel.html  class_console_panel.js  class_drop_bar-members.html  class_drop_bar.html  class_drop_bar.js  class_editor_layout-members.html  class_editor_layout.html  class_editor_layout.js  class_graph_compilation-members.html  class_graph_compilation.html  class_graph_compilation.js  class_graph_compilation_1_1_impl-members.html  class_graph_compilation_1_1_impl.html  class_graph_compilation_1_1_impl.js  class_graph_compiler-members.html  class_graph_compiler.html  class_graph_compiler.js  class_graph_editor-members.html  class_graph_editor.html  class_graph_editor.js  class_graph_preview_panel-members.html  class_graph_preview_panel.html  class_graph_preview_panel.js  class_graph_serializer-members.html  class_graph_serializer.html  class_graph_state-members.html  class_graph_state.html  class_graph_state.js  (+312 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  (+119 more)
docs/latex/: annotated.tex  app_8cpp.tex  app_8h.tex  app_8h_source.tex  class_app.tex  class_console_emi_logger.eps  class_console_emi_logger.tex  class_console_panel.tex  class_drop_bar.tex  class_editor_layout.tex  class_graph_compilation.tex  class_graph_compilation_1_1_impl.tex  class_graph_compiler.tex  class_graph_editor.tex  class_graph_preview_panel.tex  class_graph_serializer.tex  class_graph_state.tex  class_inspector_panel.tex  class_left_panel.tex  class_main_editor.tex  class_node_preview.tex  class_node_registry.tex  class_pin_resolver.tex  class_top_panel.tex  class_ui.tex  console_emi_logger_8cpp.tex  console_emi_logger_8h.tex  console_emi_logger_8h_source.tex  console_panel_8cpp.tex  console_panel_8h.tex  console_panel_8h_source.tex  constants_8h.tex  constants_8h_source.tex  dir_125d3060b55a89c2e76fcb5a11464a04.tex  dir_1899e9f1443dc2c6d730bf840a3ce99f.tex  dir_352c0f9e7bb668ee2abec0883aaca013.tex  dir_5194e5fea318fda12687127c23f8aba1.tex  dir_60dd2a9c2e146f0ab6ba42f98d3ec091.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_6e40953f6246d8ee989ac475a2739d4e.tex  (+135 more)
src/: CMakeLists.txt  main.cpp
src/app/: app.cpp  app.cpp.save  app.h  appConstants.h  constants.h  dropBar.cpp  dropBar.h  editor.h  editorLayer.cpp  editorLayer.h  editorLayout.cpp  editorLayout.h  leftPanel.cpp  leftPanel.h  mainEditor.cpp  mainEditor.h  node.cpp  node.h  panel.h  topPanel.cpp  topPanel.h  ui.cpp  ui.h  visualNode.cpp  visualNode.h
src/core/: README.md
src/core/compiler/: README.md  astBuilders.h  graphCompiler.cpp  graphCompiler.h  nodeCompileHelpers.h  pinResolver.cpp  pinResolver.h  textParseHelpers.h
src/core/graph/: README.md  idGen.h  link.cpp  link.h  nodeField.h  pin.cpp  pin.h  types.h  visualNode.cpp  visualNode.h
src/core/graphModel/: README.md  link.h  pin.cpp  types.h  visualNodeUtils.h
src/core/registry/: README.md  fieldWidget.cpp  fieldWidget.h  nodeDescriptor.h  nodeFactory.cpp  nodeFactory.h  nodeRegistry.cpp  nodeRegistry.h
src/core/registry/nodes/: README.md  dataNodes.cpp  demoNodes.cpp  eventNodes.cpp  flowNodes.cpp  functionNodes.cpp  logicNodes.cpp  nodeCompileHelpers.h  renderNodes.cpp  structNodes.cpp
src/demo/AStarFinder/: README.txt
src/demo/AStarFinder/extra/: astarDemoGraph.h  astarGameFunctions.cpp  astarGameFunctions.h
src/demo/AStarFinder/original/: GameFunctions.cpp  main_original.cpp
src/editor/: README.md  graphCompilation.cpp  graphCompilation.h  graphEditor.cpp  graphEditor.h  graphEditorUtils.cpp  graphEditorUtils.h  graphSerializer.cpp  graphSerializer.h  graphState.cpp  graphState.h  mainEditor.cpp  mainEditor.h  nodeColorCategories.h  settings.cpp  settings.h  spawnPayload.h
src/editor/graph/: README.md  graphCompilation.cpp  graphCompilation.h  graphEditor.cpp  graphEditor.h  graphEditorUtils.cpp  graphEditorUtils.h  graphExecutor.cpp  graphExecutor.h  graphSerializer.cpp  graphSerializer.h  graphState.cpp  graphState.h
src/editor/panels/: README.md  consoleEmiLogger.cpp  consolePanel.cpp  consolePanel.h  graphPreviewPanel.cpp  graphPreviewPanel.h  inspectorPanel.cpp  inspectorPanel.h  leftPanel.cpp  leftPanel.h  renderPanel.cpp  renderPanel.h  topPanel.cpp  topPanel.h
src/editor/renderer/: README.md  fieldWidgetRenderer.cpp  fieldWidgetRenderer.h  linkRenderer.cpp  linkRenderer.h  nodeRenderer.cpp  nodeRenderer.h  pinRenderer.cpp  pinRenderer.h
src/editor/widgets/: nodePreview.cpp  nodePreview.h
src/ui/: consoleEmiLogger.h  consolePanel.cpp  consolePanel.h  dropBar.cpp  dropBar.h  fileBar.cpp  fileBar.h  graphPreviewPanel.cpp  graphPreviewPanel.h  inspectorPanel.cpp  leftPanel.cpp  leftPanel.h  nodePreview.cpp  nodePreview.h  theme.h  topPanel.cpp  topPanel.h
tests/: CMakeLists.txt  test_graph_compiler.cpp  test_graph_model.cpp  test_graph_state.cpp  test_placeholder.cpp  test_serializer_placeholder.cpp  test_settings_placeholder.cpp
(+2 files in other folders)
